--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ng2-charts": "^2.3.0",
     "ngx-color-picker": "^9.0.0",
     "ngx-highlightjs": "^4.1.0-beta",
+    "parallax-js": "^3.1.0",
     "rxjs": "^6.6.2",
     "simplemde": "^1.11.2",
     "tslib": "^2.0.0",
