--- a/package.json
+++ b/package.json
@@ -28,24 +28,21 @@
     "@angular/platform-server": "~10.0.8",
     "@angular/router": "~10.0.8",
     "@auth0/angular-jwt": "^4.2.0",
+    "@nguniversal/express-engine": "^10.0.0-rc.1",
     "@popperjs/core": "^2.3.3",
     "@stripe/stripe-js": "^1.5.0",
-    "@types/node": "^12.11.1",
-    "@types/simplemde": "^1.11.7",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "express": "^4.15.2",
     "fuse.js": "^6.0.4",
     "highlight.js": "^9.18.1",
     "jquery": "^3.5.0",
+    "localstorage-polyfill": "^1.0.1",
     "marked": "^0.8.2",
     "ng-recaptcha": "^5.0.0",
     "ng2-charts": "^2.3.0",
-    "ngx-color-picker": "^9.0.0",
-    "ngx-highlightjs": "^4.1.0-beta",
-    "parallax-js": "^3.1.0",
     "rxjs": "^6.6.2",
-    "simplemde": "^1.11.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.7",
     "zone.js": "~0.10.2"
@@ -55,10 +52,13 @@
     "@angular/cli": "^10.0.5",
     "@angular/compiler-cli": "~10.0.8",
     "@angular/language-service": "~10.0.8",
+    "@nguniversal/builders": "^10.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.33",
     "@types/marked": "^0.7.4",
+    "@types/node": "^12.11.1",
     "chai": "^4.2.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
