--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "compression": "^1.7.4",
+    "domino": "^2.1.6",
     "express": "^4.15.2",
     "fuse.js": "^6.0.4",
     "highlight.js": "^9.18.1",
@@ -42,6 +44,7 @@
     "marked": "^0.8.2",
     "ng-recaptcha": "^5.0.0",
     "ng2-charts": "^2.3.0",
+    "node-fetch": "^2.6.0",
     "rxjs": "^6.6.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.7",
@@ -53,12 +56,14 @@
     "@angular/compiler-cli": "~10.0.8",
     "@angular/language-service": "~10.0.8",
     "@nguniversal/builders": "^10.0.2",
+    "@types/compression": "^1.7.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.33",
     "@types/marked": "^0.7.4",
     "@types/node": "^12.11.1",
+    "angular-prerender": "^6.0.5",
     "chai": "^4.2.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
